cria rota GET para buscar map reports via bounding box
